--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native": "0.74.2",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-navigation": "^5.0.0"
+    "react-navigation": "^5.0.0",
+    "typescript": "~5.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -34,7 +35,7 @@
     "globals": "^15.6.0",
     "prettier": "3.3.2",
     "react-native-dotenv": "^3.4.11",
-    "typescript": "^5.1.3",
+    "typescript": "^5.5.2",
     "typescript-eslint": "^7.13.1"
   },
   "private": true
