--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-navigation": "^5.0.0",
-    "typescript": "~5.5.2"
+    "typescript": "~5.5.2",
+    "use-debounce": "^10.0.1",
+    "@react-native-picker/picker": "2.7.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
